# lambdacube-ir

./: stack.yaml
ddl/: Definitions.hs  Generate.hs  Language.hs  ddl.cabal
ddl/lib/: LambdaCube.IR.RT.cs  RT.kt
ddl/lib/java/RT/: Maybe.java  V2.java  V3.java  V4.java
ddl/templates/: data.cs.ede  data.hpp.ede  data.hpp2.ede  data.hs.ede  data.java.ede  data.kt.ede  data.purs.ede  json.java.ede  json.kt.ede
lambdacube-ir.haskell/: CHANGELOG.md  lambdacube-ir.cabal
lambdacube-ir.haskell/src/: IR.hs
lambdacube-ir.haskell/src-generated/LambdaCube/: IR.hs  Mesh.hs  PipelineSchema.hs
lambdacube-ir.haskell/src/LambdaCube/: IR.hs  Linear.hs  Mesh.hs  PipelineSchema.hs  PipelineSchemaUtil.hs
