name:                ddl
version:             0.1.1.0
synopsis:            data definition language with ADT support
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable ddl-generate
  main-is:             Generate.hs
  other-modules:       Language, Definitions
  other-extensions:    RankNTypes, OverloadedStrings, DeriveGeneric, LambdaCase, FlexibleInstances
  build-depends:
      base
    , aeson
    , mtl
    , containers
    , text
    , unordered-containers
    , directory
    , time
    , filepath
    , ede
  default-language:    Haskell2010
