name:                lambdacube-ir
version:             0.3.1.1
synopsis:            LambdaCube 3D intermediate representation of 3D graphics pipelines
description:         LambdaCube 3D intermediate representation of 3D graphics pipelines
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     LambdaCube.Linear
                       LambdaCube.IR
                       LambdaCube.Mesh
                       LambdaCube.PipelineSchema
                       LambdaCube.PipelineSchemaUtil
  other-extensions:    OverloadedStrings, RecordWildCards, DeriveFunctor

  build-depends:       base >=4.9,
                       containers >=0.5,
                       vector >=0.12,
                       text >=1.2,
                       aeson >=1.1,
                       mtl >=2.2
  hs-source-dirs:      src, src-generated
  default-language:    Haskell2010
